--- a/annotatedS5.ipynb
+++ b/annotatedS5.ipynb
@@ -54,9 +54,20 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Runtime Setup\n",
+        "Ensure runtime is set to GPU to ensure gpu parallelisation speedup"
+      ],
+      "metadata": {
+        "id": "WIpj_s_ZcaAJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "!pip install dm-haiku"
+        "!pip install dm-haiku\n",
+        "!pip install hippox"
       ],
       "metadata": {
         "id": "XylzIGnbooEy",
@@ -65,7 +76,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
